# contextd

./: .gitignore  LICENSE  Makefile  Package.swift  README.md
ContextD/App/: AppDelegate.swift  ContextDApp.swift  ServiceContainer.swift
ContextD/Capture/: AccessibilityReader.swift  CaptureEngine+AdaptiveInterval.swift  CaptureEngine+SleepWake.swift  CaptureEngine.swift  ImageDiffer+TileDiff.swift  ImageDiffer.swift  OCRProcessor.swift  ScreenCapture.swift
ContextD/Enrichment/: CitationStrategy.swift  EnrichmentEngine.swift  RetrievalPipeline.swift  TwoPassLLMStrategy.swift
ContextD/LLMClient/: LLMClient.swift  OpenRouterClient.swift
ContextD/Permissions/: PermissionManager.swift
ContextD/Server/: APIModels.swift  APIRoutes+SemanticSearch.swift  APIRoutes.swift  APIServer.swift  APIServerMiddleware.swift  OpenAPISpec.swift  ScalarDocsPage.swift
ContextD/Storage/: Database.swift  EmbeddingStore.swift  StorageManager.swift  (+5 more)
Tests/: ImageDifferTests.swift
docs/: SPEC.md
hooks/: session-context.sh
launchd/: com.contextd.app.plist  com.contextd.consolidate.plist  com.contextd.daily-reflection.plist  com.contextd.llm-proxy.plist  com.contextd.mental-map.plist  com.contextd.nightly-digest.plist  com.contextd.obsidian-sync.plist
llm-proxy/: claude_proxy.py  pyproject.toml
llm-proxy/claude_proxy/: __init__.py  __main__.py  cache.py  queue.py  server.py  tracking.py
mcp-bridge/: contextd_mcp.py  pyproject.toml
scripts/: consolidate-vault.py  daily-reflection.py  install-launchd.sh  mental-map.py  nightly-digest.py  obsidian-init.sh  obsidian-sync.py
(+14 files in other folders)
