[project]
name = "claude-llm-proxy"
version = "0.2.0"
description = "OpenAI-compatible HTTP proxy that translates requests to claude -p subprocess calls"
requires-python = ">=3.11"
dependencies = []
license = "MIT"

[project.scripts]
claude-proxy = "claude_proxy:main"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "PLW"]
